app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes.demo.app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: kubernetes_demo_app
    spec:
      containers:
        - name: kubernetes-demo-app
          image: hiphipjorge/kubernetes-demo-app:v0.0.14
          ports:
            - containerPort: 8000
